Fix layout shifting on poke images

--- a/src/components/Card/styles.module.scss
+++ b/src/components/Card/styles.module.scss
@@ -4,10 +4,13 @@
   justify-content: center;
   align-items: center;
   box-shadow: -2px 1px 13px rgba(0, 0, 0, 0.1);
+  padding: 10px;
 
   .image {
-    max-width: 100%;
-    max-height: 50%;
+    position: relative;
+    width: 80%;
+    height: 300px;
+    margin-top: 10px;
   }
 
   .name,
